# ViT

./: .flake8  .gitignore  README.md  pyproject.toml
multirun/2024-06-02/03-19-54/: multirun.yaml
notebook/: test.ipynb
outputs/2024-05-10/19-25-15/.hydra/: hydra.yaml
outputs/2024-05-10/19-28-06/.hydra/: hydra.yaml
outputs/2024-05-10/19-28-18/.hydra/: config.yaml  hydra.yaml
outputs/2024-05-10/19-29-52/.hydra/: hydra.yaml
outputs/2024-05-10/19-30-33/.hydra/: hydra.yaml
outputs/2024-05-10/19-33-42/.hydra/: config.yaml  hydra.yaml
outputs/2024-05-10/19-33-51/.hydra/: hydra.yaml
outputs/2024-05-10/19-34-00/.hydra/: hydra.yaml
outputs/2024-05-10/19-34-25/.hydra/: hydra.yaml
outputs/2024-05-10/19-34-32/.hydra/: hydra.yaml
outputs/2024-05-10/19-36-34/.hydra/: hydra.yaml
outputs/2024-05-10/19-40-13/.hydra/: config.yaml  hydra.yaml
outputs/2024-05-10/19-40-37/.hydra/: hydra.yaml
outputs/2024-05-10/19-42-29/.hydra/: hydra.yaml
outputs/2024-05-10/19-43-13/.hydra/: config.yaml  hydra.yaml
outputs/2024-05-10/19-46-39/.hydra/: hydra.yaml
outputs/2024-05-10/19-51-35/.hydra/: hydra.yaml
outputs/2024-05-10/19-52-19/.hydra/: hydra.yaml
outputs/2024-05-11/18-46-28/.hydra/: hydra.yaml
outputs/2024-05-11/18-51-41/.hydra/: config.yaml  hydra.yaml
outputs/2024-05-11/18-52-16/.hydra/: hydra.yaml
src/ViT/: __init__.py  __main__.py
src/ViT/Encodeur/: multi_head.py  residual_connecion.py
src/ViT/run/: inference.py  prepare_data.py  train.py  utils.py
src/ViT/run/conf/: inference.yaml  train.yaml  (+1 more)
src/ViT/src/: config.py
src/ViT/utils/: utils.py
(+196 files in other folders)
